# test-duckdb

./: .pre-commit-config.yaml  CLAUDE.md  EXPERIMENT_RESULTS_REPORT.md  README.md  analyze_batch_results.py  batch_experiment_report.md  collect_server_specs.py  context.md  devin.md  final_comprehensive_report.md  integration_test.py  pr_body.md  pyproject.toml  server_specifications.json  server_specifications.txt  test_duckdb_vss_installation.py  test_query_stats.py  test_recall_fix.py  test_recall_multiple_configs.py
benchmarks/: __init__.py  conftest.py
docs/: 01-draft-duckdb-vector-search-investigation.md  02-experimental-design.md
plan/: 01-functional-architecture.md  02-type-definitions.md  03-pure-functions.md  04-effect-management.md  05-pipeline-composition.md  06-experiment-workflow.md  07-implementation-guide.md  08-current-status.md
src/dashboard/: __init__.py  terminal.py
src/effects/: dashboard.py
src/pipelines/: composition.py  experiments.py
src/runners/: analysis_runner.py  checkpoint.py  experiment_runner.py  monitoring.py  parallel_runner.py
src/test_duckdb/: __init__.py
src/types/: aliases.py  core.py  dashboard.py  monads.py
src/web/: __init__.py  dashboard.py
tests/: __init__.py
tests/dashboard/: test_terminal.py
tests/effects/: __init__.py  test_db_connection.py  test_db_search.py  test_db_tables.py  test_visualization.py
tests/pipelines/: test_composition.py  test_experiments.py
tests/pure/: __init__.py  test_analyzers.py  test_calculators.py  test_generators.py
tests/runners/: test_checkpoint.py  test_monitoring.py  (+2 more)
(+16 files in other folders)
