[project]
name = "test-duckdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Devin AI", email = "devin-ai-integration@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "duckdb>=1.3.1",
    "faker>=37.4.0",
    "isort>=6.0.1",
    "matplotlib>=3.10.3",
    "mypy>=1.16.1",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pre-commit>=4.2.0",
    "psutil>=7.0.0",
    "pyrsistent>=0.20.0",
    "pytest>=8.4.1",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.12.0",
    "seaborn>=0.13.2",
]

[project.scripts]
test-duckdb = "test_duckdb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
